Fixes alignment on small screens

--- a/src/components/Sections/AboutContent/AboutContent.module.css
+++ b/src/components/Sections/AboutContent/AboutContent.module.css
@@ -43,6 +43,8 @@
 
 @media only screen and (max-width: 1024px) {
   .section-container {
+    flex-flow: column;
+    align-items: center;
     max-width: 100vw;
     border-radius: 0;
   }
